# kindle-epub-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  update_container.sh
src/kindle_epub_sync/: __init__.py
src/kindle_epub_sync/adapters/: __init__.py
src/kindle_epub_sync/application/ports/: __init__.py  drive_gateway.py  email_gateway.py
src/kindle_epub_sync/application/use_cases/: __init__.py  synchronize_epub_files.py
src/kindle_epub_sync/domain/entities/: __init__.py  file_descriptor.py  processing_report.py
src/kindle_epub_sync/entrypoints/: __init__.py  bootstrap.py  cli.py  reporting.py  scheduler.py  settings.py
src/kindle_epub_sync/infrastructure/email/: __init__.py  settings.py  smtp_gateway.py
src/kindle_epub_sync/infrastructure/google_drive/: __init__.py  drive_gateway.py  drive_service_factory.py  settings.py
tests/integration/: test_stage1_project_layout.py  test_stage2_retry_behavior.py  test_stage2_synchronization_flow.py  test_stage3_google_drive_configuration.py  test_stage3_google_drive_gateway_contract.py  test_stage4_email_configuration.py  test_stage4_email_gateway_contract.py  test_stage5_cli_entrypoint.py  test_stage5_runtime_configuration.py  test_stage6_dockerization.py
tests/unit/kindle_epub_sync/: __init__.py  test_architecture_packages.py  test_package_entrypoint.py
tests/unit/kindle_epub_sync/application/use_cases/: test_synchronize_epub_files.py
tests/unit/kindle_epub_sync/entrypoints/: test_cli.py  test_reporting.py  test_scheduler.py  test_settings.py
(+7 files in other folders)
